    \item Make the labeling of restricted mean consistent in print and
    summary, for single state and multistate survfit.
    \item With just the right data the coxexact.c routine would do a
    very inefficient calculation: so slow it appeared to be an infinite
    loop.
    \item Bug in pspline.R: I had neglected to include 'degree' in the
    retained arguments for makepredictcall. 
}}
\section{Changes in version 3.2-11}{
  \itemize{
    \item Missing labels for the "pairwise" option in yates(), fixed.
    \item Bug in plot.survfit -- could not use conf.int=T and xmax in
    the same call.  Pointed out by Dirk Larson.
    \item Failure of survfit, when applied to a multi-state coxph model with
    strata().  Repaired and added this as a test case.
    \item Change seq(along=  to seq(along.with=, to match the complete
    argument name.
    \item In pyears(...,data.frame=TRUE), if the levels of a tcut are
    numeric return a numeric rather than a factor.  (Version 2.4 feature
    that had been inadvertently removed.)
    \item Fix mistake in survfit.coxphms(..., stype=1): had pmin when I
    meant pmax.  (Resulting curves were not even close.)  Add a test
    case.
    \item update anova.survreg to have class("anova", "data.table").
    Error pointed out by Daniel Sjoberg.
}}

\section{Changes in version 3.2-10}{
  \itemize{
    \item CRAN valgrind checks discovered an uninitialized vector in
    one of the C routines.  Now fixed.  Updated version is now on CRAN.
}}

\section{Changes in version 3.2-9}{
  \itemize{
    \item More careful tests of the rttright function.
    \item Fix bug in tmerge that was introduced in 3.2-8. A new
    consistency check was too aggressive and would flag a legal dataset.
    \item Fix tmerge bug reported by E Lundt: if two or more additions
    were before the start of a subject's timeline, tdc would pick the
    first rather than the last.
    \item Add the last test case for residuals.survfit (auc for tstart,