@@ -637,16 +637,16 @@ coxph <- function(formula, data, weights, subset, na.action,
         #  is all we need, but more for backward compatability with survConcordance.fit
         if (length(cluster))
             temp <- concordancefit(Y, fit$linear.predictors, istrat, weights,
-                                              cluster=cluster, reverse=TRUE,
-                                    timefix= FALSE)
+                                   cluster=cluster, reverse=TRUE,
+                                   timefix= FALSE)
         else temp <- concordancefit(Y, fit$linear.predictors, istrat, weights,
-                                      reverse=TRUE, timefix= FALSE)
+                                        reverse=TRUE, timefix= FALSE)
         if (is.matrix(temp$count))
-             fit$concordance <- c(colSums(temp$count), concordance=temp$concordance,
-                                  std=sqrt(temp$var))
+            fit$concordance <- c(colSums(temp$count), concordance=temp$concordance,
+                                     std=sqrt(temp$var))
         else fit$concordance <- c(temp$count, concordance=temp$concordance, 
-                                  std=sqrt(temp$var))
-     
+                                      std=sqrt(temp$var))
+
         na.action <- attr(mf, "na.action")
         if (length(na.action)) fit$na.action <- na.action
         if (model) {
