@@ -41,7 +41,7 @@ int cholesky3(double **matrix, int n, int m, double *diag, double toler)
     nonneg=1;
     eps =0;
     for (i=0; i<m; i++) if (diag[i] <eps) eps = diag[i];
-    for (i=0; i<n2; i++) if (matrix[i][i+m] > eps)  eps = matrix[i][i+m];
+    for (i=0; i<n2; i++) if (matrix[i][i+m] < eps)  eps = matrix[i][i+m];
      
     if (eps==0) eps= toler;  /* no positive diagonals! */
     else eps *= toler;
