@@ -2213,6 +2213,15 @@ article{Breslow72,
     pages= {672--677}
     }
 
+@book{Royston08,
+    author={Royston, P. and Sauerbrie, W.},
+    year= 2008,
+    title={Multivariable Model-Building: A Pragmatic Approach to Regression 
+             Anaylsis based on Fractional Polynomials for Modelling 
+             Continuous Variables},
+    publisher={Wiley}
+}
+
 @article{Royston13b,
     author={Royston, P. and Altman, D. G.},
     year = {2013},
